Closed Bug 1963597 Opened 1 year ago Closed 1 year ago

Nursery tenured allocation rate is no longer shown in the profiler

Categories

(Core :: JavaScript: GC, defect)

defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox140 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This used to be present in GCMinor markers in the profiler but was broken when we added strings to the nursery back in bug 1692359. This changed the names of the minor GC phases which the profiler used to calculate the rate.

Instead, we should calculate this in the JS engine and simplify the profiler code.

Currently the profiler calculats from phase times, but it is broken because the
names of the phases have changed. We will move to calculating this in the
engine instead.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/281909f9148b Send tenured allocation rate to profiler r=sfink
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: