Bug 1963597 - Send tenured allocation rate to profiler r=sfink

Currently the profiler calculats from phase times, but it is broken because the
names of the phases have changed. We will move to calculating this in the
engine instead.

Differential Revision: https://phabricator.services.mozilla.com/D247280